--- a/ClapToFind2017/app/src/main/res/values-sw360dp/dimens.xml
+++ b/ClapToFind2017/app/src/main/res/values-sw360dp/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <dimen name="header_height">200dp</dimen>
     <dimen name="text_size">20sp</dimen>
-    <dimen name="textview_width">250dp</dimen>
+    <dimen name="textview_width">220dp</dimen>
     <dimen name="image_button_width">160dp</dimen>
     <dimen name="image_button_height">190dp</dimen>
     <dimen name="image_button_marginTop">60dp</dimen>
@@ -10,4 +10,6 @@
     <dimen name="padding_dialog">10dp</dimen>
     <dimen name="height_sensity_dialog">100dp</dimen>
     <dimen name="width_sensity_dialog">300dp</dimen>
+    <dimen name="textview_padding">5dp</dimen>
+    <dimen name="margin_layout">40dp</dimen>
 </resources>
