--- a/ClapToFind2017/app/src/main/res/layout/dialog_select_sensity_layout.xml
+++ b/ClapToFind2017/app/src/main/res/layout/dialog_select_sensity_layout.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="100dp"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <TextView
+        android:textSize="@dimen/text_size"
+        android:layout_marginTop="@dimen/textview_padding"
+        android:textColor="@color/colorPrimaryDark"
+        android:gravity="center"
+        android:text="Increase sensity when your phone is in noisy environment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:gravity="center"
+        android:layout_marginTop="@dimen/margin_right_text"
         android:textSize="@dimen/text_size"
         android:textColor="@color/color_text_menu"
         android:text="40%"
         android:id="@+id/tvSensityProgress"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <SeekBar
         android:id="@+id/sbSensity"
@@ -18,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
-        android:layout_marginTop="@dimen/padding_dialog"
+        android:layout_marginTop="@dimen/margin_right_text"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,6 +38,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_sensity_ok"/>
         <Button
+            android:layout_marginLeft="@dimen/margin_layout"
             android:text="Cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
