--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/background_light"
     tools:context="com.example.acer.claptofind2017.SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -171,6 +172,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
+        android:gravity="center"
+        android:padding="@dimen/textview_padding"
         android:background="@drawable/background_textview_click"
         android:id="@+id/tvPickRingtone"
         android:layout_width="@dimen/textview_width"
@@ -189,7 +192,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
-        android:text="RingTone 1"
+        android:text="miss_pooja"
         android:textSize="@dimen/text_size"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toRightOf="@+id/tvPickRingtone"
@@ -210,6 +213,8 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPickRingtone" />
 
     <TextView
+        android:gravity="center"
+        android:padding="@dimen/textview_padding"
         android:background="@drawable/background_textview_click"
         android:id="@+id/tvPickSensity"
         android:layout_width="@dimen/textview_width"
@@ -235,6 +240,23 @@
         app:layout_constraintLeft_toRightOf="@+id/tvPickSensity"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:padding="@dimen/textview_padding"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
+        android:textColor="@color/color_text_menu"
+        android:gravity="center"
+        android:id="@+id/tvNotificationFlash"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
