--- a/ClapToFind2017/app/src/main/res/layout/dialog_select_sensity_layout.xml
+++ b/ClapToFind2017/app/src/main/res/layout/dialog_select_sensity_layout.xml
@@ -8,7 +8,7 @@
         android:layout_marginTop="@dimen/textview_padding"
         android:textColor="@color/colorPrimaryDark"
         android:gravity="center"
-        android:text="Increase sensity when your phone is in noisy environment"
+        android:text="Decrease sensity when your phone is in noisy environment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
