--- a/ClapToFind2017/app/src/main/res/layout/fragment_home.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:padding="@dimen/textview_padding"
-        android:textColor="@color/color_text_menu"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
         android:textStyle="bold" />
 
