--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="@string/alert_mode"
         android:textColor="@color/color_text_menu"
         android:textSize="@dimen/text_size"
@@ -172,20 +172,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
-        android:gravity="center"
-        android:padding="@dimen/textview_padding"
-        android:background="@drawable/background_textview_click"
         android:id="@+id/tvPickRingtone"
-        android:layout_width="@dimen/textview_width"
+        android:layout_width="@dimen/image_button_width"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/background_textview_click"
+        android:gravity="center"
+        android:padding="@dimen/textview_padding"
         android:text="Ringtone"
         android:textSize="@dimen/text_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/tvResultRingtone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -194,7 +196,7 @@
         android:layout_marginTop="16dp"
         android:text="miss_pooja"
         android:textSize="@dimen/text_size"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.877"
         app:layout_constraintLeft_toRightOf="@+id/tvPickRingtone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -213,20 +215,21 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPickRingtone" />
 
     <TextView
-        android:gravity="center"
-        android:padding="@dimen/textview_padding"
-        android:background="@drawable/background_textview_click"
         android:id="@+id/tvPickSensity"
-        android:layout_width="@dimen/textview_width"
+        android:layout_width="@dimen/image_button_width"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/background_textview_click"
+        android:gravity="center"
+        android:padding="@dimen/textview_padding"
         android:text="Sensitivity"
         android:textSize="@dimen/text_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/tvResultSensity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -234,9 +237,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
         android:text="40"
-        android:textColor="@color/color_text_menu"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.918"
         app:layout_constraintLeft_toRightOf="@+id/tvPickSensity"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -245,7 +248,7 @@
         android:padding="@dimen/textview_padding"
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
-        android:textColor="@color/color_text_menu"
+        android:textColor="@color/colorPrimaryDark"
         android:gravity="center"
         android:id="@+id/tvNotificationFlash"
         android:layout_width="0dp"
