--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -11,16 +11,13 @@
         android:id="@+id/tvMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="20dp"
         android:text="@string/alert_mode"
         android:textColor="@color/color_text_menu"
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -30,7 +27,7 @@
         android:layout_height="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMode"
@@ -145,28 +142,39 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:id="@+id/mLinearSetting"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"></LinearLayout>
+
     <TextView
-        android:textColor="@color/color_text_menu"
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="10dp"
         android:text="Alert Settings"
+        android:textColor="@color/color_text_menu"
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/mLinearSetting" />
 
     <TextView
-        android:background="@color/color_text_menu"
         android:id="@+id/textView12"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/color_text_menu"
         android:text="TextView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -175,8 +183,8 @@
         android:id="@+id/tvPickRingtone"
         android:layout_width="@dimen/image_button_width"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/background_textview_click"
         android:gravity="center"
         android:padding="@dimen/textview_padding"
@@ -186,17 +194,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/tvResultRingtone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="miss_pooja"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
-        app:layout_constraintHorizontal_bias="0.877"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintLeft_toRightOf="@+id/tvPickRingtone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -207,9 +215,10 @@
         android:layout_height="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@color/color_text_menu"
         android:text="TextView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPickRingtone" />
@@ -218,8 +227,8 @@
         android:id="@+id/tvPickSensity"
         android:layout_width="@dimen/image_button_width"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/background_textview_click"
         android:gravity="center"
         android:padding="@dimen/textview_padding"
@@ -229,37 +238,34 @@
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
-        android:textStyle="bold"
         android:id="@+id/tvResultSensity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="40"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
-        app:layout_constraintHorizontal_bias="0.918"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.947"
         app:layout_constraintLeft_toRightOf="@+id/tvPickSensity"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
-        android:padding="@dimen/textview_padding"
-        android:textSize="@dimen/text_size"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
-        android:gravity="center"
         android:id="@+id/tvNotificationFlash"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
+        android:gravity="center"
+        android:padding="@dimen/textview_padding"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
