--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -1,12 +1,16 @@
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/background_light"
     tools:context="com.example.acer.claptofind2017.SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/tvMode"
         android:layout_width="wrap_content"
@@ -254,18 +258,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
+        android:layout_marginTop="20dp"
         android:id="@+id/tvNotificationFlash"
         android:layout_width="0dp"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/textview_padding"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvResultSensity"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
