check flash hardware

--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -203,7 +203,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/tv_margin_top"
         android:text="miss_pooja"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
@@ -247,7 +247,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="40"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size"
