--- a/ClapToFind2017/app/src/main/res/values/dimens.xml
+++ b/ClapToFind2017/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_right_text">20dp</dimen>
+    <dimen name="tv_margin_top">15dp</dimen>
 </resources>
