--- a/ClapToFind2017/app/src/main/res/values-sw320dp/dimens.xml
+++ b/ClapToFind2017/app/src/main/res/values-sw320dp/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="width_sensity_dialog">266dp</dimen>
     <dimen name="textview_padding">4dp</dimen>
     <dimen name="margin_layout">35dp</dimen>
+    <dimen name="tv_margin_top">15dp</dimen>
 </resources>
