--- a/ClapToFind2017/app/src/main/res/values-sw470dp/dimens.xml
+++ b/ClapToFind2017/app/src/main/res/values-sw470dp/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="width_sensity_dialog">391dp</dimen>
     <dimen name="textview_padding">6dp</dimen>
     <dimen name="margin_layout">52dp</dimen>
+    <dimen name="tv_margin_top">15dp</dimen>
 </resources>
