--- a/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
+++ b/ClapToFind2017/app/src/main/res/layout/fragment_setting.xml
@@ -198,6 +198,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
+        android:maxLines="3"
         android:id="@+id/tvResultRingtone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
